// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New syntax babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd
  const foo = {};
  _exports.foo = foo;
  const optionalChain = foo?.bar;
  _exports.optionalChain = optionalChain;
  const nullCoalesc = foo ?? 0;
  _exports.nullCoalesc = nullCoalesc;
  foo.bar ??= 'bar';
  foo.baz ||= 'baz';
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd
  const foo = {};
  _exports.foo = foo;
  const optionalChain = foo?.bar;
  _exports.optionalChain = optionalChain;
  const nullCoalesc = foo ?? 0;
  _exports.nullCoalesc = nullCoalesc;
  foo.bar ??= 'bar';
  foo.baz ||= 'baz';
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "var _foo$bar;

// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;

  var _foo$bar;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var foo = {};
  _exports.foo = foo;
  var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
  _exports.optionalChain = optionalChain;
  var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
  _exports.nullCoalesc = nullCoalesc;
  (_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
  foo.baz || (foo.baz = 'baz');
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "var _foo$bar;

// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;

  var _foo$bar;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd
  const foo = {};
  _exports.foo = foo;
  const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
  _exports.optionalChain = optionalChain;
  const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
  _exports.nullCoalesc = nullCoalesc;
  (_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
  foo.baz || (foo.baz = 'baz');
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`New syntax babel transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "var _foo$bar;

// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ?? (foo.bar = 'bar');
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`New syntax babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ?? (foo.bar = 'bar');
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`New syntax babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ?? (foo.bar = 'bar');
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        foo: ()=>foo,
        nullCoalesc: ()=>nullCoalesc,
        optionalChain: ()=>optionalChain
    });
    const foo = {};
    const optionalChain = foo?.bar;
    const nullCoalesc = foo ?? 0;
    foo.bar ??= 'bar';
    foo.baz ||= 'baz';
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        foo: ()=>foo,
        nullCoalesc: ()=>nullCoalesc,
        optionalChain: ()=>optionalChain
    });
    const foo = {};
    const optionalChain = foo?.bar;
    const nullCoalesc = foo ?? 0;
    foo.bar ??= 'bar';
    foo.baz ||= 'baz';
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var _foo, _foo1;
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
(_foo1 = foo).baz || (_foo1.baz = "baz");
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
var _foo, _foo1;
Object.defineProperty(exports, "__esModule", {
    value: true
});
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
(_foo1 = foo).baz || (_foo1.baz = "baz");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        foo: function() {
            return foo;
        },
        nullCoalesc: function() {
            return nullCoalesc;
        },
        optionalChain: function() {
            return optionalChain;
        }
    });
    var _foo, _foo1;
    var foo = {};
    var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
    var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
    var _bar;
    (_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
    (_foo1 = foo).baz || (_foo1.baz = "baz");
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
var _foo, _foo1;
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
(_foo1 = foo).baz || (_foo1.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        foo: ()=>foo,
        nullCoalesc: ()=>nullCoalesc,
        optionalChain: ()=>optionalChain
    });
    var _foo, _foo1;
    const foo = {};
    const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
    const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
    var _bar;
    (_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
    (_foo1 = foo).baz || (_foo1.baz = 'baz');
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`New syntax swc transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
var _foo, _foo1;
Object.defineProperty(exports, "__esModule", {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
(_foo1 = foo).baz || (_foo1.baz = "baz");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
var _foo, _foo1;
Object.defineProperty(exports, "__esModule", {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
(_foo1 = foo).baz || (_foo1.baz = "baz");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
var _foo, _foo1;
Object.defineProperty(exports, "__esModule", {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
(_foo1 = foo).baz || (_foo1.baz = "baz");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
var _foo, _foo1;
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = "bar";
(_foo1 = foo).baz || (_foo1.baz = "baz");
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { foo, nullCoalesc, optionalChain } = data;",
]
`;

exports[`New syntax swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
(_foo = foo).bar ?? (_foo.bar = 'bar');
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`New syntax swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
(_foo = foo).bar ?? (_foo.bar = 'bar');
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`New syntax swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
var _foo, _foo1;
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
(_foo = foo).bar ?? (_foo.bar = 'bar');
(_foo1 = foo).baz || (_foo1.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
